# stellarcade

./: .gitignore  rust-toolchain.toml
.github/workflows/: lint.yml  test-contracts.yml
backend/: .env.example
backend/src/: server.js
contracts/: Cargo.toml
contracts/achievement-badge/: Cargo.toml
contracts/color-prediction/: Cargo.toml
contracts/comprehensive-test-suite/: Cargo.toml
contracts/contract-address-registry/: Cargo.toml
contracts/contract-circuit-breaker/: Cargo.toml
contracts/contract-health-registry/: Cargo.toml
contracts/contract-metadata-registry/: Cargo.toml
contracts/contract-monitoring/: Cargo.toml
contracts/contract-upgrade-timelock/: Cargo.toml
contracts/cross-chain-bridge/: Cargo.toml
contracts/cross-contract-call-guard/: Cargo.toml
contracts/daily-reward-emission/: Cargo.toml
contracts/daily-trivia/: Cargo.toml
contracts/dynamic-fee-policy/: Cargo.toml
contracts/epoch-scheduler/: Cargo.toml
contracts/escrow-vault/: Cargo.toml
contracts/exploit-prevention/: Cargo.toml
contracts/fee-management/: Cargo.toml
contracts/gas-optimization-analysis/: Cargo.toml
contracts/governance-token/: Cargo.toml  README.md
contracts/higher-lower/: Cargo.toml
contracts/matchmaking-queue/: Cargo.toml
contracts/multiplayer-room/: Cargo.toml
contracts/nft-reward/: Cargo.toml
contracts/number-guess/: Cargo.toml
contracts/oracle-integration/: Cargo.toml
contracts/pattern-puzzle/: Cargo.toml
contracts/penalty-slashing/: Cargo.toml
docs/: API_DOCUMENTATION.md  HYGIENE_MANIFEST.md
frontend/: pnpm-lock.yaml
(+108 files in other folders)
