[package]
name = "stellarcade-contract-address-registry"
version = "0.1.0"
edition = "2021"
authors = ["Stellarcade Team"]
license = "MIT"
description = "Contract Address Registry for Stellarcade platform"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "21.7.1"

[dev-dependencies]
soroban-sdk = { version = "21.7.1", features = ["testutils"] }

