[package]
name = "stellarcade-cross-chain-bridge"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
soroban-sdk = "25.0.2"
stellarcade-shared = { path = "../shared" }

[dev-dependencies]
soroban-sdk = { version = "25.0.2", features = ["testutils"] }
ed25519-dalek = "2.1.0"
rand = "0.8.5"

[lib]
crate-type = ["cdylib", "rlib"]

